# Batch-Image-Processing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Widget/: Widget.pro  Widget.pro.user.48e8b1c  Widget.pro.user.67c41ff  dialog.cpp  dialog.h  widget.cpp  widget.h  widget.ui
Widget/ico/: left.qrc
processing/: CMakeLists.txt  processing.cpp  processing.hpp  processing_test.cpp
